--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <p>
             <a href="https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/access-and-downloads/digital-boundary-files"
             target="_blank">
-            States and Territories - 2021 - Shapefile
+            States and Territories - 2021 - Shapefile by ABS
          </a>
           </p>
           <p>
