--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="pure-u-1-2 section" style="padding-top: 4em;">
         <p>From 2017–2024, Singapore and Hong Kong <strong>showing a high speed</strong> repeatedly and stay over the top while other countries experience more rapid changes.</p> 
         <p> United Arab Emirates, Qatar, Chile and Thailand accelerate through nationwide fibre and peering upgrades. <strong>Top speeds are approaching</strong> 250–300 Mbps in 2023–2024 across multiple countries.</p>
-        <p> Europe provides <strong>consistent depth</strong> in the top twenty: Switzerland, Spain, France, Denmark, Romania, Iceland and Liechtenstein appear frequently, clustering around 180–225 Mbps by 2024, indicating mature broadband markets and investment.</p>
+        <p> Europe placement <strong>is consistent</strong> in the top twenty: Switzerland, Spain, France, Denmark, Romania, Iceland and Liechtenstein appear frequently, clustering around 180–225 Mbps by 2024, indicating mature broadband markets and investment.</p>
         <p>Australia improved over years but still remains outside the top group each year and typically <strong>two to four times slower</strong> than leaders. Results suggest fibre rollout and geography raising costs for upgrades.</p>
       </div>
     </div>
