--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="pure-u-1-2 section" style="padding-top: 4em;">
         <p>From 2017–2024, Singapore and Hong Kong <strong>showing a high speed</strong> repeatedly and stay over the top while other countries experience more rapid changes.</p> 
         <p> United Arab Emirates, Qatar, Chile and Thailand accelerate through nationwide fibre and peering upgrades. <strong>Top speeds are approaching</strong> 250–300 Mbps in 2023–2024 across multiple countries.</p>
-        <p> Europe placement <strong>is consistent</strong> in the top twenty: Switzerland, Spain, France, Denmark, Romania, Iceland and Liechtenstein appear frequently, clustering around 180–225 Mbps by 2024, indicating mature broadband markets and investment.</p>
+        <p> Europe placement <strong>is consistent</strong> in the top twenty: Switzerland, Spain, France, Denmark, Romania, Iceland and Liechtenstein appear frequently, clustering around 180–225 Mbps by 2024 that indicates mature broadband markets and investment.</p>
         <p>Australia improved over years but still remains outside the top group each year and typically <strong>two to four times slower</strong> than leaders. Results suggest fibre rollout and geography raising costs for upgrades.</p>
       </div>
     </div>
@@ -108,8 +108,8 @@
     <div class="pure-g">
       <div class="pure-u-1-2 section" style="padding-top: 5em;padding-right: 7em; max-width: 550px;">
         <p>From 2017 to 2024, the <strong>world average rises</strong> from 31 to 85 Mbps, while Australia grows from 25.5 to 72 Mbps. Australia leads in 2021, matches 2022 and continue growing in 2024 slightly.</p>
-        <p> Crossovers suggest differences in upgrade timing. Australia leads from <strong>major fibre upgrades</strong> around 2020, but later improvements were slower than other countries, potentially reflecting investment cycles, density differences and post pandemic traffic growth. </p>
-        <p>2022 dip likely reflects the <strong>Russia–Ukraine war and energy shock</strong> disrupting networks along with method changes in the dataset (country coverage, aggregation)</p>
+        <p> Crossovers suggest differences in upgrade timing. Australia leads from <strong>major fibre upgrades</strong> around 2020 but later improvements were slower than other countries that potentially reflect investment cycles, density differences and post pandemic traffic growth. </p>
+        <p>2022 dip likely reflects the <strong>Russia–Ukraine war and energy shock</strong> which disrupted networks along with strategy changes in the dataset such as country coverage.</p>
       </div>
 
       <div class="pure-u-1-2">
@@ -129,7 +129,7 @@
       <div class="pure-u-1-2 section" style="padding-top: 8em">
         <p>Every state <strong>improves year by year </strong>from 2019 to 2024. A clear shift appears around 2021–2023, then another jump in 2024.</p>
         <p>Victoria and New South Wales <strong>sit near the top</strong> across years, while Northern Territory and Tasmania remain lower. Queensland and South Australia stay in the middle. Gaps narrow as speeds rise.</p>
-        <p>State figures <strong>skew higher</strong> because they are tests weighted and metro-heavy (more samples from fast urban fibre users). While the global dataset is a country-level average across many slower nations and uses different aggregation, so its mean is lower.</p>
+        <p>State figures and average <strong>skew higher</strong> because they are tests weighted and metro-heavy (more samples from fast urban fibre users), while the global dataset is a country level average across many slower nations and uses different aggregation, so its mean is lower.</p>
       </div>
     </div>
 
@@ -142,7 +142,7 @@
         <br>
         <li><strong>Leaders gap:</strong> Rankings confirm top nations sustain 200–300 Mbps, while Australia remains <strong>outside the top-20</strong>.</li>
         <br>
-        <li><strong>GDP vs speed:</strong> A clear positive link; Australia sits <strong>below peers with similar GDP</strong>, indicating unrealised performance.</li>
+        <li><strong>GDP vs speed:</strong> Shows a clear positive link with Australia sitting <strong>below peers with similar GDP</strong>that indicates a poor performance.</li>
         <br>
         <li><strong>NBN fibre upgrades and investment drove gains:</strong> 2024 peaks suggest <strong>upgrades reached</strong> homes and workplaces.</li>
 
